shorts header and cotent gap fixed

--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -4396,6 +4396,7 @@ ul.topsocial-icons li {
 
 
 .stories-container {
+    margin-top: 15px;
     display: flex;
     /* gap: 10px;
     overflow-x: auto; */
